[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["tests"]

[project]
name = "pyflexlab"
version = "1.0"
description = "Integrated Tools for Electronic, Cryogenic and Magnetic Measurements"
authors = [{name="Dongkai", email="dongkai001@e.ntu.edu.sg"}]
readme = "README.md"
license = "MIT"
urls = { Homepage = "https://github.com/panasee/pyflexlab" }
requires-python = ">=3.11"
keywords = [
  "measurement", 
  "instrumentation"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Physics"
]
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "plotly>=5.24.1",
    "pyvisa",
    "pyvisa-py",
    "pythonnet",
    "pymeasure>=0.14.0",
    "qcodes>=0.47.0",
    "qcodes-contrib-drivers",
    "jupyter",
    "dash",
    "prefect",
    "pyomnix",
]

[project.optional-dependencies]
gui = ["PyQt6", "PyQt6-WebEngine"]

[project.scripts]
gui_measure = "pyflexlab.gui:main"
gui_coor_trans = "pyflexlab.auxiliary:Flakes.gui_coor_transition"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
pyflexlab = [
  "pltconfig/rand_color.json",
  "templates/**/*"
]
